--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
 <!--        <jakarta-annotation.version>2.1.1</jakarta-annotation.version>-->
         <os-maven-plugin.version>1.7.0</os-maven-plugin.version>
-        <swagger-annotations.version>2.2.7</swagger-annotations.version>
+        <springdoc.openapi.version>1.6.12</springdoc.openapi.version>
     </properties>
 
     <groupId>com.github.hrozhek</groupId>
